--- a/src/pages/launch-detail/launch-detail.html
+++ b/src/pages/launch-detail/launch-detail.html
@@ -7,12 +7,30 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>launch-detail</ion-title>
+    <ion-title>{{launch.mission_name}}</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+  <ion-card>
+      <img src="{{ launch.links.mission_patch_small }}">
+    <ion-card-content>
+      <p>
+        <b>Nom:</b> {{launch.mission_name}}  <br />
+        <b>Année de lancement:</b> {{launch.launch_year}} <br/>
+        <b>Site:</b> {{launch.launch_site.site_name}}<br/>
+      </p>
 
+      <p>
+        <b>Rocket:</b> {{launch.rocket.rocket_name}}<br/> 
+      </p>
+
+      <p>
+          <b>Detail:</b><br/>
+          {{launch.details}}<br/> 
+      </p>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
