--- a/src/pages/launch-list/launch-list.html
+++ b/src/pages/launch-list/launch-list.html
@@ -7,29 +7,12 @@
 <ion-header>
 
   <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Launch List</ion-title>
+    <ion-title>launch-list</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-  <ion-list>
-    <button ion-item *ngFor = "let launch of launches" (click)="openLaunchDetail(launch)">
-      <ion-avatar item-start>
-        <img src="{{ launch.links.mission_patch_small }}">
-      </ion-avatar>
-      <h2>
-        <div float-left>{{ launch.mission_name }}</div>
-        <div float-right>
-          <ion-badge color ="primary">{{ launch.launch_success }}</ion-badge>
-        </div>
-      </h2>
-      <br />
-      <p>{{ launch.details }}</p>
-    </button>
-  </ion-list>
+  {{launches | json }}
 </ion-content>
