--- a/src/pages/about-tabs/about-tabs.html
+++ b/src/pages/about-tabs/about-tabs.html
@@ -1,10 +1,4 @@
-<!--
-  Generated template for the AboutTabsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Us" tabIcon="body"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Company" tabIcon="briefcase"></ion-tab>
+  <ion-tab [root]="aboutUsRoot" tabTitle="Us" tabIcon="body"></ion-tab>
+  <ion-tab [root]="aboutCompanyRoot" tabTitle="Company" tabIcon="briefcase"></ion-tab>
 </ion-tabs>
