--- a/src/pages/cores/cores.html
+++ b/src/pages/cores/cores.html
@@ -5,14 +5,25 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>Cores</ion-title>
-  </ion-navbar>
-
+      <button ion-button menuToggle>
+        <ion-icon name="menu"></ion-icon>
+      </button>
+      <ion-title>All Cores</ion-title>
+    </ion-navbar>
 </ion-header>
 
 
 <ion-content padding>
-
+  <ion-list>
+    <button ion-item *ngFor = "let core of cores" (click)="openCoreDetail(core)">
+        <div float-left>{{ core.core_serial }}</div>
+        <div float-right>
+          <ion-badge *ngIf="core.status == 'expended'" color ="secondary">{{ core.status }}</ion-badge>
+          <ion-badge *ngIf="core.status == 'active'" color ="secondary">{{ core.status }}</ion-badge>
+          <ion-badge *ngIf="core.status == 'destroyed'" color ="danger">{{ core.status }}</ion-badge>
+          <ion-badge *ngIf="core.status == 'retired'" color ="dark">{{ core.status }}</ion-badge>
+        </div>
+    </button>
+  </ion-list>
 </ion-content>
