add of theme in app

--- a/src/pages/about-company/about-company.html
+++ b/src/pages/about-company/about-company.html
@@ -15,21 +15,21 @@
   </ion-header>
   
   
-  <ion-content padding>
-    <ion-card *ngIf="spaceXInfo" no-padding>
+  <ion-content padding class="pageView">
+    <ion-card *ngIf="spaceXInfo" no-padding class="semi-transparent">
   
       <img src="../../assets/imgs/spacex_logo.jpg">
       <ion-card-content text-center>
           <i>"{{ spaceXInfo.summary }}"</i>
       </ion-card-content>
   
-      <ion-item>
+      <ion-item class="transparent">
         <ion-icon name="logo-usd" item-left large></ion-icon>
         <h2>Valuation</h2>
         <p> {{ spaceXInfo.valuation }} $ </p>
       </ion-item>
   
-      <ion-item>
+      <ion-item class="transparent">
         <ion-icon name="people" item-left large></ion-icon>
         <h2>People</h2>
         <p> CEO : {{ spaceXInfo.ceo}} </p>
@@ -39,20 +39,20 @@
         <p> Employees : {{ spaceXInfo.employees}} </p>
       </ion-item>
   
-      <ion-item>
+      <ion-item class="transparent">
         <ion-icon name="pin" item-left large></ion-icon>
         <h2>Headquarter</h2>
         <p> {{ spaceXInfo.headquarters.address }} </p>
         <p> {{ spaceXInfo.headquarters.city }}, {{ spaceXInfo.headquarters.state}} </p>
       </ion-item>
   
-      <ion-item>
+      <ion-item class="transparent">
         <ion-icon name="home" item-start large></ion-icon>
         <h2>Foundation</h2>
         <p>Founded in {{ spaceXInfo.founded }} by {{ spaceXInfo.founder }}</p>
       </ion-item>
   
-      <ion-item>
+      <ion-item class="transparent">
         <ion-icon name="jet" item-left large></ion-icon>
         <h2>Launch Sites</h2>
         <p> {{ spaceXInfo.launch_sites}} </p>
