--- a/src/pages/about-tabs/about-tabs.html
+++ b/src/pages/about-tabs/about-tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs>
+<ion-tabs class="pageView">
   <ion-tab [root]="aboutUsRoot" tabTitle="Us" tabIcon="body"></ion-tab>
   <ion-tab [root]="aboutCompanyRoot" tabTitle="Company" tabIcon="briefcase"></ion-tab>
 </ion-tabs>
