--- a/src/pages/about-us/about-us.html
+++ b/src/pages/about-us/about-us.html
@@ -15,16 +15,16 @@
   </ion-header>
   
   
-  <ion-content padding>
-    <ion-card padding>
+  <ion-content padding class="pageView">
+    <ion-card padding class="semi-transparent">
       <img src="../../assets/imgs/timemachine.png">
-    <ion-card-header text-center>
-      SpaceXAPI
-    </ion-card-header>
-    <ion-card-content text-center>
-      <p><b>SpaceXAPI</b> is a little Ionic project that use SpaceX API to display info about company, launches, vehicules and more stuff.</p>
-      <p>We are three mobile developpers at ESGI</p>
-    </ion-card-content>
+      <ion-card-header text-center>
+        SpaceXAPI
+      </ion-card-header>
+      <ion-card-content text-center>
+        <p><b>SpaceXAPI</b> is a little Ionic project that use SpaceX API to display info about company, launches, vehicules and more stuff.</p>
+        <p>We are three mobile developpers at ESGI</p>
+      </ion-card-content>
     </ion-card>
   </ion-content>
   
