--- a/src/pages/homepage/homepage.html
+++ b/src/pages/homepage/homepage.html
@@ -13,7 +13,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content padding class="pageView">
     <ion-item>
         <button ion-item *ngIf = "nextLaunche">
           <h3>
