--- a/src/pages/launch-detail/launch-detail.html
+++ b/src/pages/launch-detail/launch-detail.html
@@ -13,9 +13,9 @@
 </ion-header>
 
 
-<ion-content padding>
-  <ion-card>
-      <img src="{{ launch.links.mission_patch_small }}">
+<ion-content padding class="pageView">
+  <ion-card class="semi-transparent">
+    <img src="{{ launch.links.mission_patch_small }}">
     <ion-card-content>
       <p>
         <b>Nom:</b> {{launch.mission_name}}  <br />
