--- a/src/pages/rocket-detail/rocket-detail.html
+++ b/src/pages/rocket-detail/rocket-detail.html
@@ -13,8 +13,8 @@
 </ion-header>
 
 
-<ion-content padding>
-    <ion-card>
+<ion-content padding class="pageView">
+    <ion-card class="semi-transparent">
       <ion-card-content>
         <p>
           <b>Nom: </b> {{rocket.name}}  <br />
@@ -25,7 +25,7 @@
       </ion-card-content>
     </ion-card>
 
-    <ion-card>
+    <ion-card class="semi-transparent">
         <ion-card-content>
           <b>Hauteur</b>
           <p>
@@ -35,7 +35,7 @@
         </ion-card-content>
     </ion-card>
 
-    <ion-card>
+    <ion-card class="semi-transparent">
         <ion-card-content>
           <b>Diamètre</b>
           <p>
@@ -45,7 +45,7 @@
         </ion-card-content>
     </ion-card>
 
-    <ion-card>
+    <ion-card class="semi-transparent">
         <ion-card-content>
           <b>Engine</b>
           <p>
@@ -55,7 +55,7 @@
         </ion-card-content>
     </ion-card>
 
-    <ion-card>
+    <ion-card class="semi-transparent">
         <ion-card-content>
           <p>
             {{rocket.description}} <br/>
