--- a/src/pages/cores/cores.html
+++ b/src/pages/cores/cores.html
@@ -14,9 +14,9 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding class="pageView">
   <ion-list>
-    <button ion-item *ngFor = "let core of cores" (click)="openCoreDetails(core)">
+    <button class="semi-transparent"ion-item *ngFor = "let core of cores" (click)="openCoreDetails(core)">
         <div float-left>{{ core.core_serial }}</div>
         <div float-right>
           <ion-badge *ngIf="core.status == 'expended'" color ="secondary">{{ core.status }}</ion-badge>
