--- a/src/pages/launchpads/launchpads.html
+++ b/src/pages/launchpads/launchpads.html
@@ -15,9 +15,9 @@
   
   
   
-  <ion-content padding>
+  <ion-content padding class="pageView">
       <ion-list>
-        <button ion-item *ngFor = "let launchpad of launchpads" (click)="openLaunchpadDetail(launchpad)">
+        <button class="semi-transparent" ion-item *ngFor = "let launchpad of launchpads" (click)="openLaunchpadDetail(launchpad)">
           {{ launchpad.full_name }} <br />
           <p>ID: {{ launchpad.id}}</p>
         </button>
