--- a/src/pages/launch-list/launch-list.html
+++ b/src/pages/launch-list/launch-list.html
@@ -18,14 +18,14 @@
 
 <ion-content padding class="pageView">
   <ion-list>
-    <button class="semi-transparent" ion-item *ngFor = "let launch of launches" (click)="openLaunchDetail(launch)">
+    <button class="cell" ion-item no-lines *ngFor = "let launch of launches" (click)="openLaunchDetail(launch)">
       <ion-avatar item-start>
         <img src="{{ launch.links.mission_patch_small }}">
       </ion-avatar>
       <h2>
         <div float-left>{{ launch.mission_name }}</div>
         <div float-right>
-          <ion-badge color ="primary">{{ launch.launch_success }}</ion-badge>
+          <ion-badge *ngIf="launch.launch_success == true" color ="primary">Launched</ion-badge>
         </div>
       </h2>
       <br />
