add white font in card, change style detail page

--- a/src/pages/capsule-detail/capsule-detail.html
+++ b/src/pages/capsule-detail/capsule-detail.html
@@ -14,7 +14,7 @@
 
 
 <ion-content padding class="pageView">
-    <ion-card class="semi-transparent">
+    <ion-card class="cardContent">
       <ion-card-content>
         <p>
           <b>Name: </b> {{capsule.name}}  <br />
@@ -25,7 +25,7 @@
       </ion-card-content>
     </ion-card>
 
-    <ion-card class="semi-transparent">
+    <ion-card class="cardContent">
         <ion-card-content *ngFor = "let thruster of capsule.thrusters">
           <b>Thrusters</b>
           <p>
@@ -37,7 +37,7 @@
         </ion-card-content>
     </ion-card>
 
-    <ion-card class="semi-transparent">
+    <ion-card class="cardContent">
         <ion-card-content>
           <b>Heat Shield</b>
           <p>
@@ -47,7 +47,7 @@
         </ion-card-content>
     </ion-card>
 
-    <ion-card class="semi-transparent">
+    <ion-card class="cardContent">
         <ion-card-content>
           <b>Diameter</b>
           <p>
@@ -57,7 +57,7 @@
         </ion-card-content>
     </ion-card>
 
-    <ion-card class="semi-transparent">
+    <ion-card class="cardContent">
         <ion-card-content>
           <b>Launch payload mass</b>
           <p>
