--- a/src/pages/launch-detail/launch-detail.html
+++ b/src/pages/launch-detail/launch-detail.html
@@ -14,7 +14,7 @@
 
 
 <ion-content padding class="pageView">
-  <ion-card class="semi-transparent">
+  <ion-card class="cardContent">
     <img src="{{ launch.links.mission_patch_small }}">
     <ion-card-content>
       <p>
