--- a/src/pages/core-details/core-details.html
+++ b/src/pages/core-details/core-details.html
@@ -14,22 +14,22 @@
 
 
 <ion-content padding class="pageView">
-  <ion-title class="semi-transparent">Details</ion-title>
-  <ion-item class="semi-transparent">
+  <ion-title class="cardContent">Details</ion-title>
+  <ion-item class="cardContent">
       <ion-icon name="home" item-left large></ion-icon>
       <h2>Return(s) To Launch Site : {{core.rtls_landings}}</h2>
     </ion-item>
-    <ion-item class="semi-transparent">
+    <ion-item class="cardContent">
       <ion-icon name="help-buoy" item-left large></ion-icon>
       <h2>Return(s) To ASDS : {{core.asds_landings}}</h2>
     </ion-item>
-    <ion-item text-wrap class="semi-transparent">
+    <ion-item text-wrap class="cardContent">
       <ion-icon name="heart" item-left large></ion-icon>
       <h2>State : {{core.status}}</h2>
       <p><i>{{core.details}}</i></p>  
     </ion-item>
     <br/>
-    <ion-list class="semi-transparent">
+    <ion-list class="cardContent">
       <ion-title>Missions</ion-title>
       <button class="transparent" ion-item *ngFor = "let launch of core.missions">
         <h2>
