--- a/src/pages/about-company/about-company.html
+++ b/src/pages/about-company/about-company.html
@@ -59,7 +59,7 @@
         <p> Test Sites: {{ spaceXInfo.test_sites}} </p>
       </ion-item>
   
-      <ion-item>
+      <ion-item class="transparent">
         <ion-icon name="car" item-left large></ion-icon>
         <h2>Vehicles</h2>
         <p> {{ spaceXInfo.vehicles}} </p>
