--- a/src/pages/homepage/homepage.html
+++ b/src/pages/homepage/homepage.html
@@ -13,35 +13,32 @@
   </ion-navbar>
 </ion-header>
 <ion-content class="pageView">
-  <ion-card class="semi-transparent" ion-item no-lines *ngIf = "nextLaunche" (click)="openLaunchDetail(launch)">
-    <h1 text-center padding>{{ nextLaunche.mission_name }}</h1>  
+  <ion-card class="semi-transparent" ion-item no-lines *ngIf = "nextLaunche" (click)="openLaunchDetail(nextLaunche)">
+    <h1 text-center padding><b>{{ nextLaunche.mission_name }}</b></h1>  
       <div text-center>
-        <ion-badge color ="primary">
-          {{ nextLaunche.launch_date_local | date : 'EEE d MMMM yyyy'}}
-        <br/>{{ nextLaunche.launch_date_local | date : 'HH'}} hours
-          {{ nextLaunche.launch_date_local | date : 'mm'}} minutes</ion-badge>
-      </div>
-      <br/>
-      <div text-center>
+          <h2>{{ nextLaunche.launch_date_local | date : "EEE d MMMM yyyy"}}
+          <br/>{{ nextLaunche.launch_date_local | date : "HH 'hours' mm 'minutes'"}}</h2>
+          </div>
+        <div text-center>
         <ion-badge *ngIf= "nextLaunche.links.video_link" color ="danger" (click)="openLink(nextLaunche.links.video_link)">Youtube Live</ion-badge>
         <br *ngIf= "nextLaunche.links.video_link"/>
         <ion-badge *ngIf= "nextLaunche.links.video_link" color ="danger" (click)="openLink(nextLaunche.links.video_link)">Youtube Live</ion-badge>
         <br *ngIf= "nextLaunche.links.video_link"/>
-        <ion-badge *ngIf= "nextLaunche.links.reddit_campaign && !nextLaunche.links.video_link" color ="danger" (click)="openLink(nextLaunche.links.reddit_campaign)">Reddit campaign</ion-badge>
+        <ion-badge *ngIf= "nextLaunche.links.reddit_campaign && !nextLaunche.links.video_link" color ="danger" (click)="openLink(nextLaunche.links.reddit_campaign)">Reddit</ion-badge>
       </div>
     <br/>
-    <p>{{ nextLaunche.launch_site.site_name_long }}</p>
+    <div text-wrap text-center>{{ nextLaunche.launch_site.site_name_long }}</div>
   </ion-card>
   <ion-list padding>
     <button class="cell" ion-item no-lines *ngFor = "let launch of launches" (click)="openLaunchDetail(launch)">
       <h2>
         <div float-left>{{ launch.mission_name }}</div>
         <div float-right>
-          <ion-badge color ="primary">{{ launch.launch_date_local | date : 'yyyy/MM/dd Z'}}</ion-badge>
+          <ion-badge color ="primary">{{ launch.launch_date_local | date : 'yyyy/MM/dd'}}</ion-badge>
         </div>
       </h2>
       <br />
-      <p>{{ launch.launch_site.site_name_long }}</p>
+      <p text-wrap>{{ launch.launch_site.site_name_long }}</p>
     </button>
   </ion-list>
 </ion-content>
