--- a/src/pages/homepage/homepage.html
+++ b/src/pages/homepage/homepage.html
@@ -16,14 +16,13 @@
   <ion-card class="semi-transparent" ion-item no-lines *ngIf = "nextLaunche" (click)="openLaunchDetail(nextLaunche)">
     <h1 text-center padding><b>{{ nextLaunche.mission_name }}</b></h1>  
       <div text-center>
-          <h2>{{ nextLaunche.launch_date_local | date : "EEE d MMMM yyyy"}}
-          <br/>{{ nextLaunche.launch_date_local | date : "HH 'hours' mm 'minutes'"}}</h2>
+          <h2>{{theFinalCountdown}}</h2>
           </div>
         <div text-center>
-        <ion-badge *ngIf= "nextLaunche.links.video_link" color ="danger" (click)="openLink(nextLaunche.links.video_link)">Youtube Live</ion-badge>
-        <br *ngIf= "nextLaunche.links.video_link"/>
-        <ion-badge *ngIf= "nextLaunche.links.video_link" color ="danger" (click)="openLink(nextLaunche.links.video_link)">Youtube Live</ion-badge>
-        <br *ngIf= "nextLaunche.links.video_link"/>
+          <br *ngIf= "nextLaunche.links.video_link"/>
+          <ion-badge *ngIf= "nextLaunche.links.video_link" color ="danger" (click)="openLink(nextLaunche.links.video_link)">Youtube Live</ion-badge>
+          <br *ngIf= "nextLaunche.links.wikipedia"/>
+          <ion-badge *ngIf= "nextLaunche.links.wikipedia" color ="danger" (click)="openLink(nextLaunche.links.wikipedia)">Youtube Live</ion-badge>
         <ion-badge *ngIf= "nextLaunche.links.reddit_campaign && !nextLaunche.links.video_link" color ="danger" (click)="openLink(nextLaunche.links.reddit_campaign)">Reddit</ion-badge>
       </div>
     <br/>
