add rocket navigation

--- a/src/pages/launch-detail/launch-detail.html
+++ b/src/pages/launch-detail/launch-detail.html
@@ -24,7 +24,7 @@
       </p>
 
       <p>
-        <b>Rocket:</b> {{launch.rocket.rocket_name}}<br/> 
+        <b>Rocket:</b> <button class="cell" (click)="openRocketDetail(launch.rocket.rocket_id)">{{launch.rocket.rocket_name}}</button><br/> 
       </p>
 
       <p>
