--- a/src/pages/rocket-detail/rocket-detail.html
+++ b/src/pages/rocket-detail/rocket-detail.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>{{rocket.name}}</ion-title>
+    <ion-title>{{rocket?.name}}</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -17,10 +17,10 @@
     <ion-card class="cardContent">
       <ion-card-content>
         <p>
-          <b>Nom: </b> {{rocket.name}}  <br />
-          <b>ID: </b> {{rocket.id}} <br/>
-          <b>Type: </b> {{rocket.type}}<br/>
-          <b>Coût par lancement: </b> {{rocket.cost_per_launch}} $<br/> 
+          <b>Nom: </b> {{rocket?.name}}  <br />
+          <b>ID: </b> {{rocket?.id}} <br/>
+          <b>Type: </b> {{rocket?.type}}<br/>
+          <b>Coût par lancement: </b> {{rocket?.cost_per_launch}} $<br/> 
         </p>
       </ion-card-content>
     </ion-card>
@@ -29,8 +29,8 @@
         <ion-card-content>
           <b>Hauteur</b>
           <p>
-            <b>Mètre: </b> {{rocket.height.meters}}  <br />
-            <b>Feet: </b> {{rocket.height.feet}} <br/>
+            <b>Mètre: </b> {{rocket?.height.meters}}  <br />
+            <b>Feet: </b> {{rocket?.height.feet}} <br/>
           </p>
         </ion-card-content>
     </ion-card>
@@ -39,8 +39,8 @@
         <ion-card-content>
           <b>Diamètre</b>
           <p>
-            <b>Mètre: </b> {{rocket.diameter.meters}}  <br />
-            <b>Feet: </b> {{rocket.diameter.feet}} <br/>
+            <b>Mètre: </b> {{rocket?.diameter.meters}}  <br />
+            <b>Feet: </b> {{rocket?.diameter.feet}} <br/>
           </p>
         </ion-card-content>
     </ion-card>
@@ -49,8 +49,8 @@
         <ion-card-content>
           <b>Engine</b>
           <p>
-            <b>Type: </b> {{rocket.engines.type}}  <br />
-            <b>Version: </b> {{rocket.engines.version}} <br/>
+            <b>Type: </b> {{rocket?.engines.type}}  <br />
+            <b>Version: </b> {{rocket?.engines.version}} <br/>
           </p>
         </ion-card-content>
     </ion-card>
@@ -58,7 +58,7 @@
     <ion-card class="cardContent">
         <ion-card-content>
           <p>
-            {{rocket.description}} <br/>
+            {{rocket?.description}} <br/>
           </p>
         </ion-card-content>
     </ion-card>
