--- a/src/pages/launch-detail/launch-detail.html
+++ b/src/pages/launch-detail/launch-detail.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>{{launch.mission_name}}</ion-title>
+    <ion-title>{{launch?.mission_name}}</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -15,26 +15,26 @@
 
 <ion-content padding class="pageView">
   <ion-card class="cardContent">
-    <img src="{{ launch.links.mission_patch_small }}">
+    <img src="{{ launch?.links?.mission_patch_small }}">
     <ion-card-content>
       <p>
-        <b>Nom:</b> {{launch.mission_name}}  <br />
-        <b>Année de lancement:</b> {{launch.launch_year}} <br/>
-        <b>Site:</b> {{launch.launch_site.site_name}}<br/>
+        <b>Nom:</b> {{launch?.mission_name}}  <br />
+        <b>Année de lancement:</b> {{launch?.launch_year}} <br/>
+        <b>Site:</b> {{launch?.launch_site.site_name}}<br/>
       </p>
       <br />
 
       <h2><b>ROCKET</b></h2> 
       <div class = "drawLine"></div>
       <p>   
-         <button class="cell" (click)="openRocketDetail(launch.rocket.rocket_id)">{{launch.rocket.rocket_name}}</button><br/> 
+         <button class="cell" (click)="openRocketDetail(launch?.rocket.rocket_id)">{{launch?.rocket.rocket_name}}</button><br/> 
       </p>
       <br />
 
       <h2><b>DETAIL</b></h2> 
       <div class = "drawLine"></div><br />
       <p>
-          {{launch.details}}<br/> 
+          {{launch?.details}}<br/> 
       </p>
     </ion-card-content>
   </ion-card>
