--- a/src/pages/previous-launches/previous-launches.html
+++ b/src/pages/previous-launches/previous-launches.html
@@ -19,12 +19,14 @@
   <ion-list>
     <button class="cell" ion-item no-lines *ngFor = "let launch of launches" (click)="openLaunchDetail(launch)">
       <ion-avatar item-start>
-        <img src="{{ launch.links.mission_patch_small }}">
+        <img *ngIf='launch.links.mission_patch_small' src="{{ launch.links.mission_patch_small }}">
+        <img *ngIf='!launch.links.mission_patch_small' src="../../assets/imgs/spacex_round_logo.png">
       </ion-avatar>
       <h2>
         <div float-left>{{ launch.mission_name }}</div>
         <div float-right>
-          <ion-badge *ngIf="launch.launch_success == true" color ="primary">Launched</ion-badge>
+          <ion-badge *ngIf="launch.launch_success == true" color ="primary">Success</ion-badge>
+          <ion-badge *ngIf="launch.launch_success == false" color ="danger">Failed</ion-badge>
         </div>
       </h2>
       <br />
