--- a/src/pages/next-launches/next-launches.html
+++ b/src/pages/next-launches/next-launches.html
@@ -23,7 +23,7 @@
       Launch {{ nextLaunche.flight_number }} :
       <b>{{ nextLaunche.mission_name }}</b>
     </div>
-    <div>
+    <div (click)="openMap(nextLaunche.launch_site.site_id)">
       Location :
       <b>{{ nextLaunche.launch_site.site_name}}</b>
       <img style="width: 15px;display: inline;" src="../../assets/imgs/location_icon.png"/>      
