--- a/src/pages/google-map/google-map.html
+++ b/src/pages/google-map/google-map.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>{{siteId}}</ion-title>
+    <ion-title>{{launchpad?.location.name}}</ion-title>
   </ion-navbar>
 
 </ion-header>
