add of maps to cards

--- a/src/pages/next-launches/next-launches.html
+++ b/src/pages/next-launches/next-launches.html
@@ -39,7 +39,7 @@
     </ion-grid>
   </ion-card>
   <ion-list padding>
-    <button class="cell" ion-item no-lines *ngFor = "let launch of launches" (click)="openLaunchDetail(launch)">
+    <button class="cell" ion-item no-lines *ngFor = "let launch of launches" (click)="openMap(launch.launch_site.site_id)">
       <h2>
         <div float-left>{{ launch.mission_name }}</div>
         <div float-right>
