add of links and improvement of browser

--- a/src/pages/launch-detail/launch-detail.html
+++ b/src/pages/launch-detail/launch-detail.html
@@ -24,6 +24,37 @@
       </p>
       <br />
 
+      <div ion-grid>
+        <ion-row>
+          <ion-col>
+            <ion-badge text-center ion-col *ngIf= "launch?.links?.article_link" color ="article" (click)="openLink(launch?.links?.article_link)">Article</ion-badge>
+            <ion-badge text-center ion-col *ngIf= "!launch?.links?.article_link" color ="gray">Article</ion-badge>
+          </ion-col>
+          <ion-col>
+            <ion-badge text-center ion-col *ngIf= "launch?.links?.video_link" color ="youtube" (click)="openLink(launch?.links?.video_link)">Live</ion-badge>
+            <ion-badge text-center ion-col *ngIf= "!launch?.links?.video_link" color ="gray">Live</ion-badge>
+          </ion-col>
+          <ion-col>
+              <ion-badge text-center ion-col *ngIf= "launch?.links?.presskit" color ="press" (click)="openLink(launch?.links?.presskit)">Press kit</ion-badge>
+              <ion-badge text-center ion-col *ngIf= "!launch?.links?.presskit" color ="gray">Presskit</ion-badge>
+            </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-badge text-center ion-col *ngIf= "launch?.links?.reddit_campaign" color ="reddit" (click)="openLink(launch?.links?.reddit_campaign)">Campaign</ion-badge>
+            <ion-badge text-center ion-col *ngIf= "!launch?.links?.reddit_campaign" color ="gray">Campaign</ion-badge>
+          </ion-col>
+          <ion-col>
+            <ion-badge text-center ion-col *ngIf= "launch?.links?.reddit_launch" color ="reddit" (click)="openLink(launch?.links?.reddit_launch)">Launch</ion-badge>
+            <ion-badge text-center ion-col *ngIf= "!launch?.links?.reddit_launch" color ="gray">Launch</ion-badge>
+          </ion-col>
+          <ion-col>
+            <ion-badge text-center ion-col *ngIf= "launch?.links?.reddit_media" color ="reddit" (click)="openLink(launch?.links?.reddit_media)">Media</ion-badge>
+            <ion-badge text-center ion-col *ngIf= "!launch?.links?.reddit_media" color ="gray">Media</ion-badge>
+          </ion-col>
+        </ion-row>
+      </div>
+
       <h2><b>ROCKET</b></h2> 
       <div class = "drawLine"></div>
       <p>   
@@ -31,7 +62,7 @@
       </p>
       <br />
 
-      <h2><b>DETAIL</b></h2> 
+      <h2><b>DETAILS</b></h2> 
       <div class = "drawLine"></div><br />
       <p>
           {{launch?.details}}<br/> 
