add of splashscreen and icon and quick refactor for build on device

--- a/src/pages/about-company/about-company.html
+++ b/src/pages/about-company/about-company.html
@@ -18,7 +18,7 @@
   <ion-content padding class="pageView">
     <ion-card *ngIf="spaceXInfo" no-padding class="semi-transparent">
   
-      <img src="../../assets/imgs/spacex_logo.jpg">
+      <img src="assets/imgs/spacex_logo.jpg">
       <ion-card-content text-center>
           <i>"{{ spaceXInfo.summary }}"</i>
       </ion-card-content>
