--- a/src/pages/about-us/about-us.html
+++ b/src/pages/about-us/about-us.html
@@ -17,7 +17,7 @@
   
   <ion-content padding class="pageView">
     <ion-card padding class="semi-transparent">
-      <img src="../../assets/imgs/timemachine.png">
+      <img src="assets/imgs/timemachine.png">
       <ion-card-header text-center>
         SpaceXAPI
       </ion-card-header>
