--- a/src/pages/capsule-detail/capsule-detail.html
+++ b/src/pages/capsule-detail/capsule-detail.html
@@ -32,7 +32,7 @@
           <table>
               <tr>
                 <td>
-                    <img src="../../assets/imgs/thruster.png">
+                    <img src="assets/imgs/thruster.png">
                 </td>
                 <td class="tdSpace">
                     <p *ngFor = "let thruster of capsule.thrusters">
@@ -55,7 +55,7 @@
           <table>
               <tr>
                 <td>
-                    <img src="../../assets/imgs/heatshield.png">
+                    <img src="assets/imgs/heatshield.png">
                 </td>
                 <td class="tdSpace">
                     <p>
@@ -75,7 +75,7 @@
           <table>
               <tr>
                 <td>
-                    <img src="../../assets/imgs/diameter.png">
+                    <img src="assets/imgs/diameter.png">
                 </td>
                 <td class="tdSpace">
                     <p>
