--- a/src/pages/capsules/capsules.html
+++ b/src/pages/capsules/capsules.html
@@ -17,7 +17,7 @@
     <ion-list>
       <button class="cell" ion-item no-lines *ngFor = "let capsule of capsules" (click)="openCapsuleDetail(capsule)">
         <ion-avatar item-start>
-          <img src="../../assets/imgs/capsule_cell.png">
+          <img src="assets/imgs/capsule_cell.png">
         </ion-avatar>
         {{ capsule.name }} <br />
         <p>ID: {{ capsule.id}}</p>
