--- a/src/pages/next-launches/next-launches.html
+++ b/src/pages/next-launches/next-launches.html
@@ -26,7 +26,7 @@
     <div (click)="openMap(nextLaunche.launch_site.site_id)">
       Location :
       <b>{{ nextLaunche.launch_site.site_name}}</b>
-      <img style="width: 15px;display: inline;" src="../../assets/imgs/location_icon.png"/>      
+      <img style="width: 15px;display: inline;" src="assets/imgs/location_icon.png"/>      
     </div>
     <ion-grid>
       <ion-row>
