--- a/src/pages/rocket-detail/rocket-detail.html
+++ b/src/pages/rocket-detail/rocket-detail.html
@@ -34,7 +34,7 @@
           <table>
             <tr>
               <td>
-                  <img src="../../assets/imgs/height_rocket.png">
+                  <img src="assets/imgs/height_rocket.png">
               </td>
               <td class="tdSpace">
                 <p>
@@ -54,7 +54,7 @@
           <table>
               <tr>
                 <td>
-                    <img src="../../assets/imgs/diameter.png">
+                    <img src="assets/imgs/diameter.png">
                 </td>
                 <td class="tdSpace">
                     <p>
@@ -74,7 +74,7 @@
           <table>
               <tr>
                 <td>
-                    <img src="../../assets/imgs/engine.png">
+                    <img src="assets/imgs/engine.png">
                 </td>
                 <td class="tdSpace">
                   <p>
