--- a/src/pages/launchpads/launchpads.html
+++ b/src/pages/launchpads/launchpads.html
@@ -19,7 +19,7 @@
       <ion-list>
         <button class="cell" ion-item no-lines *ngFor = "let launchpad of launchpads" (click)="openLaunchpadDetail(launchpad)">
           <ion-avatar item-start>
-            <img src="../../assets/imgs/launchpad_cell.png">
+            <img src="assets/imgs/launchpad_cell.png">
           </ion-avatar>
           {{ launchpad.full_name }} <br />
           <p>ID: {{ launchpad.id}}</p>
