--- a/src/pages/rockets/rockets.html
+++ b/src/pages/rockets/rockets.html
@@ -18,7 +18,7 @@
     <ion-list>
       <button class="cell" ion-item no-lines *ngFor = "let rocket of rockets" (click)="openRocketDetail(rocket)">
         <ion-avatar item-start>
-          <img src="../../assets/imgs/rocket_icon_cell.png">
+          <img src="assets/imgs/rocket_icon_cell.png">
         </ion-avatar>
         {{ rocket.name }} <br />
         <p>{{ rocket.country}}</p>
